# wstunnel_manager

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
config_examples/: with_log_retention.yaml  without_log_retention.yaml
jfiles/: common.just  justfile
jfiles/src/: build.just  justfile  test.just
src/: constants.rs  errors.rs  lib.rs  main.rs
src/backend/: backend_impl.rs  config.rs  mock_backend.rs  mod.rs  process.rs  types.rs
src/ui/: messages.rs  mod.rs  state.rs  theme.rs
src/ui/screens/: edit_tunnel.rs  mod.rs  tunnel_list.rs
tests/: integration_tests.rs  tests.rs
