[package]
name = "wstunnel_manager"
version = "0.1.1"
edition = "2024"
rust-version = "1.89.0"
authors = ["wstunnel Manager Contributors"]
license = "BSD-3-Clause"
description = "Cross-platform GUI for managing multiple wstunnel instances with real-time monitoring and lifecycle control"
homepage = "https://github.com/RobbyV2/wstunnel_manager"
repository = "https://github.com/RobbyV2/wstunnel_manager"
keywords = ["wstunnel", "tunnel", "gui", "websocket", "manager"]
categories = ["command-line-utilities", "network-programming", "gui"]
readme = "README.md"

[[bin]]
name = "wstunnel_manager"
path = "src/main.rs"

[lib]
name = "wstunnel_manager"
path = "src/lib.rs"

[dependencies]
iced = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
uuid = { workspace = true }
open = { workspace = true }
itertools = { workspace = true }
config = { workspace = true }
strum = { workspace = true }
humantime = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }

[workspace]
members = []

[workspace.dependencies]
iced = "0.13"
tokio = { version = "1.41", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "env-filter"] }
tracing-appender = "0.2"
arc-swap = "1.7"
notify = "7.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
open = "5.3"
itertools = "0.13"
config = "0.14"
strum = { version = "0.26", features = ["derive"] }
humantime = "2.1"
tokio-util = "0.7"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
